# tsiconv

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: conftest.py
tsiconv/: __main__.py
