[tool.poetry]
name = "tsiconv"
version = "1.0.0"
description = "convert an input time to UTC (optionally a destination timezone)."
authors = ["Tyler Bennett <tbennett6421@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tbennett6421/tsiconv"
repository = "https://github.com/tbennett6421/tsiconv"
exclude = ["tests"]
include = ["LICENSE"]
license = ""
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "tsiconv"}
]

[tool.poetry.scripts]
tsiconv = 'tsiconv.__main__:main'

[tool.poetry.dependencies]
python = "^3.8.0"
pytz = "^2021.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
